<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2023 © JAGONET  All Rights Reserved by PT. SARANA MEDIA CEMERLANG
  ~ Unauthorized copying of this file, via any medium is strictly
  ~ prohibited Proprietary and confidential
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigationHome"
        android:icon="@drawable/ic_selector_home"
        android:title="@string/home" />

    <item
        android:id="@+id/navigationHistory"
        android:icon="@drawable/ic_selector_history"
        android:title="@string/history" />

    <item
        android:id="@+id/navigationTicket"
        android:icon="@drawable/ic_selector_ticket"
        android:title="@string/support" />

    <item
        android:id="@+id/navigationAccount"
        android:icon="@drawable/ic_selector_account"
        android:title="@string/account" />
</menu>