<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:layout_margin="@dimen/dimen_16dp"
    android:padding="@dimen/dimen_12dp"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.AppCompatTextView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/date"
        tools:text="@tools:sample/lorem"
        android:fontFamily="@font/bold"
        android:textColor="@color/black"
        android:textSize="@dimen/fontsize_20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatTextView
        app:layout_constraintTop_toBottomOf="@id/date"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:id="@+id/total_label"
        android:fontFamily="@font/bold"
        android:textColor="@color/black"
        android:textSize="@dimen/fontsize_24"
        android:text="@string/total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_total"
        app:layout_constraintTop_toBottomOf="@id/total_label"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="@font/bold"
        android:textColor="@color/black"
        android:textSize="@dimen/fontsize_40"
        tools:text="@tools:sample/us_phones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_marginTop="@dimen/dimen_8dp"
        app:layout_constraintTop_toBottomOf="@id/text_total"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/label_payment"
        android:text="@string/total_payment"
        android:fontFamily="@font/bold"
        android:textColor="@color/black"
        android:textSize="@dimen/fontsize_24"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_payment"
        app:layout_constraintTop_toBottomOf="@id/label_payment"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="@font/bold"
        android:textColor="@color/black"
        android:textSize="@dimen/fontsize_40"
        android:text="Rp0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_marginTop="@dimen/dimen_8dp"
        app:layout_constraintTop_toBottomOf="@id/text_payment"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/change_label"
        android:text="@string/change_label"
        android:fontFamily="@font/bold"
        android:textColor="@color/blue_accent"
        android:textSize="@dimen/fontsize_24"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_change"
        app:layout_constraintTop_toBottomOf="@id/change_label"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="@font/bold"
        android:textColor="@color/blue_accent"
        android:textSize="@dimen/fontsize_40"
        android:text="Rp0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</androidx.constraintlayout.widget.ConstraintLayout>