<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/shape_rect_subtotal"
    android:paddingVertical="@dimen/dimen_10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/constraint1"
        android:layout_width="match_parent"
        android:paddingHorizontal="@dimen/dimen_16dp"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text1"
            android:fontFamily="@font/regular"
            android:text="@string/subtotal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/subtotal"
            android:fontFamily="@font/medium"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="@tools:sample/us_phones"
            app:layout_constraintTop_toTopOf="@id/text1"
            app:layout_constraintBottom_toBottomOf="@id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text3"
            android:fontFamily="@font/regular"
            android:text="@string/tax"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tax"
            android:fontFamily="@font/regular"
            tools:text="@tools:sample/us_zipcodes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/text3"
            app:layout_constraintTop_toBottomOf="@id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <View
            android:id="@+id/divider1"
            android:layout_marginTop="@dimen/dimen_8dp"
            app:layout_constraintTop_toBottomOf="@id/tax"
            android:background="@drawable/_dashed"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_1dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text4"
            android:fontFamily="@font/bold"
            android:text="@string/total"
            android:textSize="@dimen/fontsize_18"
            android:layout_marginTop="@dimen/dimen_4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/total"
            android:fontFamily="@font/bold"
            tools:text="@tools:sample/us_zipcodes"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="@dimen/fontsize_18"
            app:layout_constraintTop_toTopOf="@id/text4"
            app:layout_constraintTop_toBottomOf="@id/text4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        app:layout_constraintTop_toBottomOf="@id/constraint1"
        tools:itemCount="3"
        android:layout_marginTop="@dimen/dimen_4dp"
        tools:listitem="@layout/item_pay_type"
        android:visibility="gone"
        android:background="@drawable/shape_rect_subtotal"
        android:layout_marginHorizontal="@dimen/dimen_4dp"
        android:backgroundTint="@color/shimmer_color"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="3"
        android:id="@+id/recyclerPayType"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>