<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:background="@color/white"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint1"
        android:paddingHorizontal="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="wrap_content"
            android:id="@+id/text1"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/dimen_4dp"
            android:fontFamily="@font/medium"
            android:text="@string/customer_label"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/fontsize_14" />

        <TextView
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/asterisk"
            android:fontFamily="@font/medium"
            android:textAllCaps="false"
            android:textColor="@android:color/holo_red_light"
            android:textSize="@dimen/fontsize_14" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:layout_marginTop="@dimen/dimen_3dp"
            app:layout_constraintTop_toBottomOf="@id/text1"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/spinnerCustomer"
            android:layout_width="match_parent"
            tools:listitem="@layout/item_spinner"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_et"
            android:fontFamily="@font/medium"
            android:hint="@string/label_item_name"
            android:textCursorDrawable="@drawable/cursor_et"
            android:imeOptions="actionNext"
            android:textSize="@dimen/fontsize_12" />

        <TextView
            android:id="@+id/text2"
            android:layout_marginTop="@dimen/dimen_4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spinnerCustomer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/medium"
            android:text="@string/date_label"
            android:textAllCaps="false"
            android:paddingEnd="@dimen/dimen_4dp"
            android:visibility="gone"
            android:textColor="@color/black"
            android:textSize="@dimen/fontsize_14" />

        <TextView
            app:layout_constraintTop_toBottomOf="@id/spinnerCustomer"
            app:layout_constraintStart_toEndOf="@id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/asterisk"
            android:fontFamily="@font/medium"
            android:textAllCaps="false"
            android:visibility="gone"
            android:textColor="@android:color/holo_red_light"
            android:textSize="@dimen/fontsize_14" />

        <androidx.constraintlayout.widget.ConstraintLayout
            app:layout_constraintTop_toBottomOf="@id/text2"
            android:layout_width="match_parent"
            android:visibility="gone"
            android:background="@drawable/shape_et"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/scanSku"
                android:background="@drawable/shape_et_left"
                android:backgroundTint="@color/blue_light"
                app:tint="@color/blue_accent_dark"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:src="@drawable/ic_calendar_search"
                android:layout_width="@dimen/dimen_42dp"
                android:layout_height="0dp"/>


            <androidx.appcompat.widget.AppCompatTextView
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/scanSku"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/textDate"
                android:layout_width="0dp"
                android:gravity="center_vertical"
                android:background="@null"
                android:layout_height="wrap_content"
                android:fontFamily="@font/medium"
                android:textCursorDrawable="@drawable/cursor_et"
                android:hint="@string/date_label"
                android:imeOptions="actionNext"
                android:inputType="text|textCapWords"
                android:padding="@dimen/dimen_12dp"
                android:textSize="@dimen/fontsize_14" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_marginTop="@dimen/dimen_12dp"
        android:id="@+id/divider1"
        app:layout_constraintTop_toBottomOf="@id/constraint1"
        android:background="@color/white_semi_blue"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_3dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:paddingHorizontal="@dimen/dimen_10dp"
        app:layout_constraintTop_toBottomOf="@id/divider1"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:listitem="@layout/item_cart_sale"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:itemCount="2"
        android:id="@+id/recyclerView"
        android:layout_height="wrap_content"/>
</androidx.constraintlayout.widget.ConstraintLayout>